Removed Unreserve, Updated swagger docs
